--- a/LMS-M/@wooseok.html
+++ b/LMS-M/@wooseok.html
@@ -1,18 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<!-- icon css
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">-->
+	<link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+	
+	<!-- App Css-->
+	<link href="assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
+	<!-- Bootstrap Css -->
+	<link href="assets/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" />
+	<!-- Icons Css -->
+	<link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" />
+	<!-- Main css-->
+	<link href="assets/css/main.css" rel="stylesheet" type="text/css" />
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+
+	<!-- AOS CSS -->
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+	<!--swiper CSS-->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+
+	<!-- JavaScript Bundle with Popper -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+	<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+	<!--AOS JS-->
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	<!--swiper JS-->
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+	<!--google map JS-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+	<title>Hello, world!</title>
+	<style>
+		body {
+			margin: 0;
+			font-family: 'Noto Sans KR', sans-serif;
+			font-size: 0.875rem;
+			font-weight: 400;
+			line-height: 1.5;
+			color: #495057;
+			background-color: #f8f8f8;
+			-webkit-text-size-adjust: 100%;
+			-webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+	</style>
 </head>
 <body>
-	first comit<br><br>
+	<h6>부트스트랩 테스트 글꼴</h6>
+	<h5>부트스트랩 테스트 글꼴</h5>
+	<h4>부트스트랩 테스트 글꼴</h4>
+	<h3>부트스트랩 테스트 글꼴</h3>
+	<h2>부트스트랩 테스트 글꼴</h2>
+	<h1>부트스트랩 테스트 글꼴</h1>
 
-	first commit test<br><br>
-
-	두번째 수정<br>
-	세번째 수정<br>
-	네번째 수정<br>
+	<div style="font-weight: 100">부트스트랩 글꼴 두깨 테스트 100</div>
+	<div style="font-weight: 300">부트스트랩 글꼴 두깨 테스트 300</div>
+	<div style="font-weight: 400">부트스트랩 글꼴 두깨 테스트 400</div>
+	<div style="font-weight: 500">부트스트랩 글꼴 두깨 테스트 500</div>
+	<div style="font-weight: 700">부트스트랩 글꼴 두깨 테스트 700</div>
+	<div style="font-weight: 900">부트스트랩 글꼴 두깨 테스트 900</div>
 </body>
 </html> 
