--- a/LMS-M/support.html
+++ b/LMS-M/support.html
@@ -111,7 +111,7 @@
                 <div id="chart" class="apex-charts" dir="ltr"></div>
               </div>
               <div class="col justify-content-end text-end">
-                <button type="button" class="btn btn-outline-light me-2 px-3" onclick="location.href='classroom.html'"><i class="bi bi-person-video3 fs-1"></i><br /><span class="">내 강의실</span></button>
+                <button type="button" class="btn btn-outline-light me-2 px-3" onclick="location.href='classroom.php'"><i class="bi bi-person-video3 fs-1"></i><br /><span class="">내 강의실</span></button>
                 <button type="button" class="btn btn-outline-light me-2 px-2" onclick = "location.href='mypage.html'"><i class="bi bi-person-bounding-box fs-1"></i><br /><span class="">마이페이지</span></button>
                 <button type="button" class="btn btn-outline-light me-2 px-4"><i class="bi bi-bookmark-dash-fill fs-1"></i><br /><span class="">수료증</span></button>
                 <button type="button" class="btn btn-outline-light px-4"><i class="bi bi-pencil fs-1"></i><br /><span class="">재응시</span></button>
