20230209=WS : 테스트파일 업로드

--- a/LMS-M/@wooseok.html
+++ b/LMS-M/@wooseok.html
@@ -41,7 +41,7 @@
 			margin: 0;
 			font-family: 'Noto Sans KR', sans-serif;
 			font-size: 0.875rem;
-			font-weight: 400;
+			font-weight: 300;
 			line-height: 1.5;
 			color: #495057;
 			background-color: #f8f8f8;
@@ -63,5 +63,12 @@
 	<div style="font-weight: 500">부트스트랩 글꼴 두깨 테스트 500</div>
 	<div style="font-weight: 700">부트스트랩 글꼴 두깨 테스트 700</div>
 	<div style="font-weight: 900">부트스트랩 글꼴 두깨 테스트 900</div>
+	
+	<br /><br /><br /><br />
+
+	<h6>Noto Sans KR</h6>
+	<p>
+		웹 프론트엔드 개발에 있어서 CSS도 이쁘게 구현하는 것도 중요하지만, 깔끔한 폰트 역시 웹 페이지의 글자와 스타일을 더 돋보이게 합니다. 필자 한국어를 지원하는 폰트 중에서는 Noto Sans KR이 제일 가독성이 좋고, 깔끔하다고 판단됩니다. 이번 시간에는 웹 사이트에 Noto Sans KR 폰트를 적용하는 방법에 대해 자세히 알아보겠습니다.
+	</p>
 </body>
 </html> 
