--- a/LMS-M/about_us_ws.html
+++ b/LMS-M/about_us_ws.html
@@ -86,6 +86,29 @@
 
 		
 		<!-- USER START -->
+		<section class="oz-mymenu">
+			<div class="container">
+				<div class="row">
+					<!-- left -->
+					<div class="col-12 col-md-8">
+						<h3 class="text-white">학습을 위해 로그인을 진행해주세요.</h3>
+						<p class="text-white">
+							회사를 통해 수강을 하시는 경우 문자 또는 카카오톡 메시지로부터 <br/> 받은 정보로 로그인 하세요.
+						</p>
+						<div>
+							<button type="button" class="btn btn-outline-light" style="width:6rem;height: auto;"><i class="bi bi-globe2 fs-1"></i> <br />LMS SITE</button>
+						<button type="button" class="btn btn-outline-light btn-sm" style="width: 5.5rem;"><i class="bi bi-twitter fs-1"></i><br />교강사전용</button>
+						</div>
+						
+						</div>
+	
+					<!-- right -->
+					<div class="col-12  col-md-4">
+						sdf
+					</div>
+				</div>
+			</div>
+		</section>
 		<div>
 			<div class="" style="background-color: #00287A;">
 			  <div class="container px-4 px-lg-0">  
@@ -138,7 +161,7 @@
 
 		<!-- side START -->
 		<!-- 소개글 -->
-		<section id="introduction" class="ob-aps01 ob-aps02 pb-4" style="background-color: #438DFF;">
+		<section id="introduction" class="ob-aps01 pb-4" style="background-color: #438DFF;">
 			<div class="container aos-init aos-animate text-white" data-aos="fade-up">
 				<div class="h5 pt-3 text-white">교육원 소개:</div>
 				<div class="content text-center">
