--- a/LMS-M/support.html
+++ b/LMS-M/support.html
@@ -153,7 +153,7 @@
               </div>
               <div class="row mx-0"> 
                 <div class="col-2">                
-                  <div id="chart" class="apex-charts" dir="ltr"></div>
+                  <div id="chart" class="apex-charts" dir="ltr" style="1px solid red;"></div>
                 </div>
                 <div class="col justify-content-end text-end">
                   <button type="button" class="btn btn-outline-light me-2 px-3" onclick="location.href='classroom.php'"><i class="bi bi-person-video3 fs-1"></i><br /><span class="">내 강의실</span></button>
