--- a/LMS-M/index.html
+++ b/LMS-M/index.html
@@ -1285,6 +1285,7 @@
 					<div class="col">
 						<div id="carouselExampleControls" class="carousel carousel-dark h-100 slide" data-bs-ride="carousel">
 							<div class="carousel-inner">
+								<h5 class="">3/7</h5>
 								<div class="carousel-item active py-4 text-center">
 									<i class="material-symbols-outlined">download</i>
 									<h4 class=""><span class="fw-bold">개인회원 신청 양식</span></h4>
