--- a/LMS-M/@wooseok.html
+++ b/LMS-M/@wooseok.html
@@ -5,74 +5,99 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<!-- icon css
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">-->
-	<link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-	
+	<!-- icon css-->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">        
+
 	<!-- App Css-->
 	<link href="assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
 	<!-- Bootstrap Css -->
 	<link href="assets/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" />
 	<!-- Icons Css -->
 	<link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" />
-	<!-- Main css-->
-	<link href="assets/css/main.css" rel="stylesheet" type="text/css" />
+	<!-- visco css-->
+	<link href="assets/css/visco/education_inquiry.css" rel="stylesheet" type="text/css" />
+	<!--link href="assets/css/visco/visco_slide_min.css" rel="stylesheet" type="text/css" /-->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-
-	<!-- AOS CSS -->
-	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-	<!--swiper CSS-->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
 
 	<!-- JavaScript Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-	<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
-	<!--AOS JS-->
-	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-	<!--swiper JS-->
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-	<!--google map JS-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
-	<title>Hello, world!</title>
-<<<<<<< HEAD
-	<style>
-		body {
-			margin: 0;
-			font-family: 'Noto Sans KR', sans-serif;
-			font-size: 0.875rem;
-			font-weight: 300;
-			line-height: 1.5;
-			color: #495057;
-			background-color: #f8f8f8;
-			-webkit-text-size-adjust: 100%;
-			-webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
-	</style>
-=======
+	<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>   
 	
->>>>>>> 9a55b1b259a4033ed0aee687b5f9e9c475841272
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.4/Chart.bundle.min.js"></script> 
+	<script type="text/javascript" charset="utf-8" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
+
+	<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.min.js"></script> 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.4/Chart.bundle.min.js"></script> 
+	<script type="text/javascript" charset="utf-8" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
+	
+	<title>html samples</title>
+
+	<style>
+		
+	</style>
 </head>
 <body>
-	<h6>부트스트랩 테스트 글꼴</h6>
-	<h5>부트스트랩 테스트 글꼴</h5>
-	<h4>부트스트랩 테스트 글꼴</h4>
-	<h3>부트스트랩 테스트 글꼴</h3>
-	<h2>부트스트랩 테스트 글꼴</h2>
-	<h1>부트스트랩 테스트 글꼴</h1>
+	<div class="container px-0">
+		<!--row-cols- : 줄어들었을때 그리드-->
+		<!--row-cols-lg- : 기본 그리드-->
+		<!--g- : 줄어들었을때 간격-->
+		<!--g-lg- : 기본간격-->
+		<div class="row row-cols-2 row-cols-lg-3 g-2 g-lg-5">
+			<div class="col">
+				<div  style="border:1px solid red">01</div>
+			</div>
+			<div class="col">
+				<div  style="border:1px solid red">01</div>
+			</div>
+			<div class="col">
+				<div  style="border:1px solid red">01</div>
+			</div>
+		</div>
+		<hr/>
 
-	<div style="font-weight: 100">부트스트랩 글꼴 두깨 테스트 100</div>
-	<div style="font-weight: 300">부트스트랩 글꼴 두깨 테스트 300</div>
-	<div style="font-weight: 400">부트스트랩 글꼴 두깨 테스트 400</div>
-	<div style="font-weight: 500">부트스트랩 글꼴 두깨 테스트 500</div>
-	<div style="font-weight: 700">부트스트랩 글꼴 두깨 테스트 700</div>
-	<div style="font-weight: 900">부트스트랩 글꼴 두깨 테스트 900</div>
-	
-	<br /><br /><br /><br />
+		<!--col- : 줄어들었을때 그리드-->
+		<!--col-md- : 기본 그리드-->
+		<div class="row">
+			<div class="col-12  col-md-6">
+				<div  style="border:1px solid red">01</div>
+			</div>
+			<div class="col-12  col-md-6">
+				<div  style="border:1px solid red">02</div>
+			</div>
+		</div>
+		<hr/>
 
-	<h6>Noto Sans KR</h6>
-	<p>
-		웹 프론트엔드 개발에 있어서 CSS도 이쁘게 구현하는 것도 중요하지만, 깔끔한 폰트 역시 웹 페이지의 글자와 스타일을 더 돋보이게 합니다. 필자 한국어를 지원하는 폰트 중에서는 Noto Sans KR이 제일 가독성이 좋고, 깔끔하다고 판단됩니다. 이번 시간에는 웹 사이트에 Noto Sans KR 폰트를 적용하는 방법에 대해 자세히 알아보겠습니다.
-	</p>
+		<!--혼합-->
+		<!--col- : 줄어들었을때 그리드-->
+		<!--col-md- : 기본 그리드-->
+		<div class="row">
+			<div class="col-12 col-md-9">
+				<div  style="border:1px solid red">01</div>
+			</div>
+			<div class="col-12  col-md-3">
+				<!--row-cols- : 줄어들었을때 그리드-->
+				<!--row-cols-lg- : 기본 그리드-->
+				<!--g- : 줄어들었을때 간격-->
+				<!--g-lg- : 기본간격-->
+				<div class="row">
+					<div class="col-6 text-center">
+						<div  style="border:1px solid red">02-1</div>
+					</div>
+					<div class="col-6 text-center">
+						<div  style="border:1px solid red">02-2</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<hr/>
+
+		<div class="clearfix">
+			<div class="float-start">100</div>
+			<div class="float-end">200</div>
+		</div>
+		<hr/>
+	</div>
 </body>
 </html> 
