--- a/LMS-M/education.html
+++ b/LMS-M/education.html
@@ -8,20 +8,21 @@
 	<!--swiper-->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
 	<!-- App Css-->
-	<link href="assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
-	<!-- Bootstrap Css -->
-	<link href="assets/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" />
+	<!--link href="assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" /-->
+	<!-- Bootstrap.min Css -->
+	<!--link href="assets/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" type="text/css" /-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	<!-- fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 	<!-- Icons Css -->
-	<link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" />
+	<!--link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" /-->
+	<!--link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"-->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-	<link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+	<!--link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css"-->
 	<!-- visco css-->
 	<link href="assets/css/visco/education.css" rel="stylesheet" type="text/css" />
-	<link href="assets/css/visco/visco_slide_min.css" rel="stylesheet" type="text/css" />
-	
+
+
 
 	<!-- JavaScript Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
@@ -42,72 +43,51 @@
 <body>
 	<main class="pb-9">
 		<!-- GNB START-->
-		<div class="container px-0">        
-			<div>
-				<nav class="navbar navbar-expand-lg navbar-light">
-					<!-- Logo START -->
-					<a class="navbar-brand" href="index.html">
-					<!--img class="light-mode-item navbar-brand-item" src="assets/images/logo.svg" alt="logo"-->
-					<!--img class="dark-mode-item navbar-brand-item" src="assets/images/logo-light.svg" alt="logo"-->
-					<img class="dark-mode-item navbar-brand-item" src="assets/images/logo.png" alt="logo"><span class="fw-bold">원라인에듀</span>
-					</a>
-
-					<!-- Nav Search START mobile -->
-					<div class="nav my-3 my-xl-0 align-items-center d-none d-sm-block d-md-block d-lg-none">
-					<div class="nav-item w-100">
-						<form class="position-relative">
-						<input class="form-control pe-5 bg-transparent" type="search" aria-label="Search">
-						<button class="bg-transparent p-2 position-absolute top-50 end-0 translate-middle-y border-0 text-primary-hover text-reset" type="submit">
-							<i class="bi bi-search"></i>
-						</button>
-						</form>
+		<section class="gnbs">
+			<article class="container">
+				<div class="clearfix gnb-areas">
+					<div class="g-logo" onclick="location.href='index.html'">
+						<img class="pe-1" src="assets/images/common/logo-oneline.svg">
+						<h5>원라인에듀</h5>
 					</div>
+					<!-- 웹 -->
+					<div class="g-menu">
+						<span class="h5" onclick="location.href='education.html'">전체교육</span>
+						<span class="h5" onclick="location.href='about_us.html'">교육원 소개</span>
+						<span class="h5" onclick="location.href='support.html'">고객지원</span>
 					</div>
-					<!-- Nav Search END -->
-					<!-- 교육문의 mobile-->
-					<div class="d-none d-sm-block d-md-block d-lg-none">
-					<button type="button" onclick="location.href='education_inquiry.html'" class="btn btn-primary btn"><i class="bi bi-pencil-square"></i>  교육 문의</button>
-					</div>
-
-					<!-- Logo END -->              
-					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-					</button>           
-
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-						<li class="nav-item pe-2">
-						<a class="nav-link text-primary fw-bold" href="education.html">전체교육</a>
-						</li>
-						<li class="nav-item pe-2">
-						<a class="nav-link" href="about_us.html">교육원소개</a>
-						</li>
-						<li class="nav-item">
-						<a class="nav-link" href="support.html">고객지원</a>
-						</li>
-					</ul>
-					<!-- PC -->
-					<!-- Nav Search START -->
-					<div class="nav my-3 my-xl-0 px-4 flex-nowrap align-items-center d-none d-lg-block">
-						<div class="nav-item w-100">
-						<form class="position-relative">
-							<input class="form-control pe-5 bg-transparent" type="search" aria-label="Search">
-							<button class="bg-transparent p-2 position-absolute top-50 end-0 translate-middle-y border-0 text-primary-hover text-reset" type="submit">
-							<i class="bi bi-search"></i>
+					<div class="gr-web">
+						<form class="position-relative me-3">
+							<input class="form-control" type="search" aria-label="Search">
+							<button class="bg-transparent position-absolute top-50 end-0 translate-middle-y border-0 text-primary-hover text-reset" type="submit">
+								<i class="material-symbols-outlined h5">search</i>
 							</button>
 						</form>
-						</div>
+						<button type="button" onclick="location.href='education_inquiry.html'" class="btn btn-primary"><i class="material-symbols-outlined">outgoing_mail</i>교육문의</button>
 					</div>
-					<!-- Nav Search END -->
-					<!-- 교육문의 -->
-					<div class="d-none d-lg-block">
-						<button type="button" onclick="location.href='education_inquiry.html'" class="btn btn-primary btn"><i class="bi bi-pencil-square"></i>  교육 문의</button>
+					<!-- 모바일 -->
+					<div class="gr-mobile">
+						<p class="mo-search"><i class="material-symbols-outlined">search</i></p>
+						<p class="mo-inq" onclick="location.href='education_inquiry.html'"><i class="material-symbols-outlined h5">outgoing_mail</i></p>
+						<p class="mo-more d-lg-none" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="material-symbols-outlined">menu</i></p>
+					</div>
+				</div>
+				<!-- 모바일 메뉴확장 -->
+				<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+					<div class="offcanvas-header">
+						<!--h5 class="offcanvas-title" id="offcanvasRightLabel">원라인에듀</h5>
+						<button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button-->
+						<p data-bs-dismiss="offcanvas" aria-label="Close"><i class="material-symbols-outlined">close</i></p>
 					</div>
 					
-					</div>            
-				</nav>
-			</div>        
-		</div>
+					<div class="offcanvas-body">
+						<h1 onclick="location.href='education.html'">전체교육</h1>
+						<h1 onclick="location.href='about_us.html'">교육원 소개</h1>
+						<h1 onclick="location.href='support.html'">고객지원</h1>
+					</div>
+				</div>
+			</article>
+		</section>
 		<!-- GNB END-->
 
 		<!-- LOGIN USER START -->
@@ -285,12 +265,19 @@
 					<div class="bg-cover p-2 text-center">
 						<h1 class="text-white mt-4 fw-bold">직무교육</h1>
 						<h5 class="text-white mt-2">직무교육과정은 신청기간에만 가능합니다.</h5>
-						<p class="text-white">
+						<!--p class="text-white">
 							<span>직무교육</span> 검색
 							<i class="material-symbols-outlined">search</i>
-						</p>
+						</p-->
+						<form class="position-relative">
+							<input class="form-control" type="search" aria-label="Search" placeholder="카테고리 검색">
+							<button class="bg-transparent position-absolute top-50 end-0 translate-middle-y border-0 text-primary-hover text-reset" type="submit">
+								<i class="material-symbols-outlined h5">search</i>
+							</button>
+						</form>
+
 					</div>
-					<div class="days mt-3">
+					<div class="days mt-4">
 						<p>
 							<i class="material-symbols-outlined">edit_calendar</i>
 							<span>교육신청기간 :</span> <span class="text-dark h6">2022.01.01 ~ 2022.03.31</span>
@@ -324,7 +311,7 @@
 								<div class="icons">
 									<span><i class="material-symbols-outlined">bookmarks</i>9차시</span>
 									<span><i class="material-symbols-outlined">schedule</i>4시간 23분</span>
-									<span><i class="material-symbols-outlined">forum</i>23</span>
+									<span><i class="material-symbols-outlined">format_ink_highlighter</i>23</span>
 								</div>
 							</div>
 						</div>
@@ -332,11 +319,11 @@
 							<p class="imgs float-start"><img src="assets/images/common/@thum-02.png"></p>
 							<div class="txts float-end">
 								<p class="text-primary">직무교육 > 디지털 융합과정</p>
-								<h6 class="">뉴 노멀 시대! 디지털융합 블록체인 전략을 세워라!뉴 노멀 시대! 디지털융합 블록체인 전략을 세워라!</h6>
+								<h6 class="">뉴 노멀 시대!<br/> 디지털융합 블록체인 전략을 세워라!</h6>
 								<div class="icons">
 									<span><i class="material-symbols-outlined">bookmarks</i>9차시</span>
 									<span><i class="material-symbols-outlined">schedule</i>4시간 23분</span>
-									<span><i class="material-symbols-outlined">forum</i>23</span>
+									<span><i class="material-symbols-outlined">format_ink_highlighter</i>23</span>
 								</div>
 							</div>
 						</div>
@@ -348,7 +335,7 @@
 								<div class="icons">
 									<span><i class="material-symbols-outlined">bookmarks</i>9차시</span>
 									<span><i class="material-symbols-outlined">schedule</i>4시간 23분</span>
-									<span><i class="material-symbols-outlined">forum</i>23</span>
+									<span><i class="material-symbols-outlined">format_ink_highlighter</i>23</span>
 								</div>
 							</div>
 						</div>
@@ -360,7 +347,7 @@
 								<div class="icons">
 									<span><i class="material-symbols-outlined">bookmarks</i>9차시</span>
 									<span><i class="material-symbols-outlined">schedule</i>4시간 23분</span>
-									<span><i class="material-symbols-outlined">forum</i>23</span>
+									<span><i class="material-symbols-outlined">format_ink_highlighter</i>23</span>
 								</div>
 							</div>
 						</div>
@@ -372,7 +359,7 @@
 								<div class="icons">
 									<span><i class="material-symbols-outlined">bookmarks</i>9차시</span>
 									<span><i class="material-symbols-outlined">schedule</i>4시간 23분</span>
-									<span><i class="material-symbols-outlined">forum</i>23</span>
+									<span><i class="material-symbols-outlined">format_ink_highlighter</i>23</span>
 								</div>
 							</div>
 						</div>
@@ -384,7 +371,7 @@
 								<div class="icons">
 									<span><i class="material-symbols-outlined">bookmarks</i>9차시</span>
 									<span><i class="material-symbols-outlined">schedule</i>4시간 23분</span>
-									<span><i class="material-symbols-outlined">forum</i>23</span>
+									<span><i class="material-symbols-outlined">format_ink_highlighter</i>23</span>
 								</div>
 							</div>
 						</div>
@@ -396,7 +383,7 @@
 								<div class="icons">
 									<span><i class="material-symbols-outlined">bookmarks</i>9차시</span>
 									<span><i class="material-symbols-outlined">schedule</i>4시간 23분</span>
-									<span><i class="material-symbols-outlined">forum</i>23</span>
+									<span><i class="material-symbols-outlined">format_ink_highlighter</i>23</span>
 								</div>
 							</div>
 						</div>
@@ -408,7 +395,7 @@
 								<div class="icons">
 									<span><i class="material-symbols-outlined">bookmarks</i>9차시</span>
 									<span><i class="material-symbols-outlined">schedule</i>4시간 23분</span>
-									<span><i class="material-symbols-outlined">forum</i>23</span>
+									<span><i class="material-symbols-outlined">format_ink_highlighter</i>23</span>
 								</div>
 							</div>
 						</div>
@@ -420,7 +407,7 @@
 								<div class="icons">
 									<span><i class="material-symbols-outlined">bookmarks</i>9차시</span>
 									<span><i class="material-symbols-outlined">schedule</i>4시간 23분</span>
-									<span><i class="material-symbols-outlined">forum</i>23</span>
+									<span><i class="material-symbols-outlined">format_ink_highlighter</i>23</span>
 								</div>
 							</div>
 						</div>
@@ -432,31 +419,22 @@
 								<div class="icons">
 									<span><i class="material-symbols-outlined">bookmarks</i>9차시</span>
 									<span><i class="material-symbols-outlined">schedule</i>4시간 23분</span>
-									<span><i class="material-symbols-outlined">forum</i>23</span>
+									<span><i class="material-symbols-outlined">format_ink_highlighter</i>23</span>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="d-flex justify-content-center mt-4">
-						<nav aria-label="Page navigation example">
-							<ul class="pagination">
-							<li class="page-item">
-								<a class="page-link" href="#" aria-label="Previous">
-								<span aria-hidden="true">&laquo;</span>
-								</a>
-							</li>
-							<li class="page-item"><a class="page-link" href="#">1</a></li>
-							<li class="page-item"><a class="page-link" href="#">2</a></li>
-							<li class="page-item"><a class="page-link" href="#">3</a></li>
-							<li class="page-item">
-								<a class="page-link" href="#" aria-label="Next">
-								<span aria-hidden="true">&raquo;</span>
-								</a>
-							</li>
-							</ul>
+					<div class="p-ing">
+						<nav>
+							<p class="boxs m-close"><i class="material-symbols-outlined">skip_previous</i></p>
+							<p class="boxs m-close"><i class="material-symbols-outlined">fast_rewind</i></p>
+							<p class="boxs rotation"><i class="material-symbols-outlined">play_arrow</i></p>
+							<p class="nums"><span>2</span>/21</p>
+							<p class="boxs"><i class="material-symbols-outlined">play_arrow</i></p>
+							<p class="boxs m-close"><i class="material-symbols-outlined">fast_forward</i></p>
+							<p class="boxs m-close"><i class="material-symbols-outlined">skip_next</i></p>
 						</nav>
 					</div>
-					
 					<!-- contents  END-->
 				</div>
 			</div>
