--- a/LMS-M/education_inquiry_detail.html
+++ b/LMS-M/education_inquiry_detail.html
@@ -5,22 +5,22 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<!-- icon css-->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
-	<link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">        
-
+	<!--swiper-->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
 	<!-- App Css-->
-	<link href="assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
+	<!--link href="assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" /-->
 	<!-- Bootstrap.min Css -->
 	<!--link href="assets/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" type="text/css" /-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+	<!-- fonts -->
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 	<!-- Icons Css -->
-	<link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" />
+	<!--link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" /-->
+	<!--link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"-->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+	<!--link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css"-->
 	<!-- visco css-->
 	<link href="assets/css/visco/education_inquiry.css" rel="stylesheet" type="text/css" />
-	<!-- font css-->
-	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
 	<!-- JavaScript Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
@@ -84,7 +84,7 @@
 			</article>
 		</section>
 
-		<!-- NEW USER START -->
+		<!-- 카테고리 복귀 START -->
 		<section class="oe-aps-summary">
 			<article class="container py-4">
 				<div class="mb-4  text-center">
