--- a/LMS-M/guide_consignment.html
+++ b/LMS-M/guide_consignment.html
@@ -8,16 +8,17 @@
 	<!--swiper-->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
 	<!-- App Css-->
-	<link href="assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
-	<!-- Bootstrap CSS only -->
+	<!--link href="assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" /-->
+	<!-- Bootstrap.min Css -->
+	<!--link href="assets/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" type="text/css" /-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	<!-- fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 	<!-- Icons Css -->
-	<link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" />
+	<!--link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" /-->
+	<!--link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"-->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-	<link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+	<!--link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css"-->
 	<!-- visco css-->
 	<link href="assets/css/visco/education.css" rel="stylesheet" type="text/css" />
 	
@@ -40,9 +41,9 @@
 <body>
 	<main class="pb-9">
 		<!-- NEW GNB START-->
-		<section>
+		<section class="gnbs">
 			<article class="container">
-				<div class="gnbs clearfix">
+				<div class="clearfix gnb-areas">
 					<div class="g-logo" onclick="location.href='index.html'">
 						<img class="pe-1" src="assets/images/common/logo-oneline.svg">
 						<h5>원라인에듀</h5>
@@ -64,19 +65,23 @@
 					</div>
 					<!-- 모바일 -->
 					<div class="gr-mobile">
-						<p class="mo-search"><i class="material-symbols-outlined h5">search</i></p>
+						<p class="mo-search"><i class="material-symbols-outlined">search</i></p>
 						<p class="mo-inq" onclick="location.href='education_inquiry.html'"><i class="material-symbols-outlined h5">outgoing_mail</i></p>
-						<p class="mo-more d-lg-none" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="material-symbols-outlined h5">menu</i></p>
+						<p class="mo-more d-lg-none" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="material-symbols-outlined">menu</i></p>
 					</div>
 				</div>
 				<!-- 모바일 메뉴확장 -->
 				<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
 					<div class="offcanvas-header">
-						<h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
-						<button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+						<!--h5 class="offcanvas-title" id="offcanvasRightLabel">원라인에듀</h5>
+						<button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button-->
+						<p data-bs-dismiss="offcanvas" aria-label="Close"><i class="material-symbols-outlined">close</i></p>
 					</div>
+					
 					<div class="offcanvas-body">
-						...
+						<h1 onclick="location.href='education.html'">전체교육</h1>
+						<h1 onclick="location.href='about_us.html'">교육원 소개</h1>
+						<h1 onclick="location.href='support.html'">고객지원</h1>
 					</div>
 				</div>
 			</article>
