--- a/LMS-M/index.html
+++ b/LMS-M/index.html
@@ -3,29 +3,26 @@
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
 
-	
 	<!--swiper-->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
-	
+	<!-- App Css-->
+	<!--link href="assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" /-->
 	<!-- Bootstrap.min Css -->
 	<!--link href="assets/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" type="text/css" /-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-	<!-- App Css-->
-	<link href="assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
-	
+	<!-- fonts -->
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 	<!-- Icons Css -->
-	<link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" />
+	<!--link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" /-->
+	<!--link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"-->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-	<link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+	<!--link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css"-->
 	<!-- visco css-->
 	<link href="assets/css/visco/main.css" rel="stylesheet" type="text/css" />
 
-	<!-- fonts -->
-	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+	
 	
 	<!-- JavaScript Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
@@ -726,7 +723,7 @@
 		</div>
 	</div>
 	</footer>
-	<!-- footer END --> 
+	<!-- footer END -->
 	
 	<!-- New floating menu -->
     <article class="oa-nfm">
@@ -737,7 +734,7 @@
 			<p class="boxs bgs" data-bs-toggle="modal" data-bs-target=".inquiry-modal"><i class="material-symbols-outlined">send</i><span>문의</span></p>
 			<p class="boxs bgs"><i class="material-symbols-outlined">visibility</i><span>PC원격제어</span></p>
 
-			<p class="closes"><i class="material-symbols-outlined">chevron_right</i></p>
+			<p class="closes"><i class="material-symbols-outlined">chevron_left</i></p>
 		</div>
 	</article><!-- //New floating menu -->
 
